force-app/main/default/objects/ssot__ClaimParticipant__dlm/fields/ssot__ClaimParticipantRoleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimParticipantRoleId__c</fullName>
    <label>Claim Participant Role</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimParticipantRoleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>