force-app/main/default/objects/ssot__ClaimParticipant__dlm/fields/ssot__IsInjured__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsInjured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Injured</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsInjured</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>