force-app/main/default/objects/ssot__ClaimParticipant__dlm/fields/ssot__ParticipantQualificationCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParticipantQualificationCodeId__c</fullName>
    <label>Participant Qualificiation Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParticipantQualificationCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>