force-app/main/default/objects/ssot__ClaimParticipant__dlm/fields/ssot__rel_1723128215545_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128215545_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimParticipant_ParticipantId_map_A_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ClaimParticipant_ParticipantId_map_A_rel</relationshipLabel>
    <relationshipName>rel_1723128215545_end</relationshipName>
    <type>Lookup</type>
</CustomField>