force-app/main/default/objects/ssot__ClaimParticipant__dlm/fields/ssot__rel_1723128320841_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128320841_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimParticipant_ParticipantQualific_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>ClaimParticipant_ParticipantQualific_rel</relationshipLabel>
    <relationshipName>rel_1723128320841_end</relationshipName>
    <type>Lookup</type>
</CustomField>